<resources>
    <string name="app_name">SoulMate</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="select_picture">Select picture</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="age">Age</string>
    <string name="developerSettings">Developer Settings</string>
    <string name="estimation_resetAll">Reset all estimations</string>
    <string name="devPref_connection">Connection</string>
    <string name="devPref_localServerUrl">Local server URL</string>
    <string name="devPref_activateHerokuServer">Activate Heroku server</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tabName_Profile">Profile</string>
    <string name="tabName_AccountEstimations">Accounts</string>
    <string name="tabName_Chats">Chat</string>
    <string name="estimation_dislike">Dislike</string>
    <string name="estimation_like">Like</string>

    <!--Profile-->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!--Profile-->
    <string name="search_options">Search options</string>
    <string name="looking_for">Looking for</string>
    <string name="channel_name">All</string>
    <string name="channel_description">Channel for all the application notifications</string>

</resources>
