<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layot_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_side_margin"
            android:layout_marginRight="@dimen/profile_side_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_imageView_avatar"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:visibility="visible"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/profile_edit_username"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                tools:layout_editor_absoluteX="62dp" />

            <!--<ImageView-->
            <!--android:id="@+id/profile_imageView_avatar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="210dp"-->
            <!--android:contentDescription="TODO"-->
            <!--android:scaleType="centerCrop"-->
            <!--app:srcCompat="@android:color/darker_gray" />-->

            <EditText
                android:id="@+id/profile_editTextMultiline_personalStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <RadioGroup
                android:id="@+id/profile_rbuttonGroup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/profile_rbutton_Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:duplicateParentState="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/profile_rbutton_Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/profile_button_logout"
                    style="@style/mainButton"
                    android:layout_width="0dp"
                    android:text="@string/logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_button_save" />

                <Button
                    android:id="@+id/profile_button_save"
                    style="@style/mainButton"
                    android:layout_width="220dp"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_loading" />
</FrameLayout>
